Game funktioniert zu 50%